--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -177,7 +176,7 @@
 
         /* Contact Section */
         #contact-me {
-            background-color: #333;
+            background-color: #2c2c2c;
             color: #fff;
             padding: 50px 0;
         }
@@ -216,7 +215,7 @@
             display: inline-block;
             width: 50px;
             height: 50px;
-            background-color: #28a745;
+            background-color: #1d7b2d;
             border-radius: 50%;
             margin: 0 10px;
             position: relative;
@@ -233,7 +232,7 @@
         }
 
         .social-media-icons a:hover {
-            background-color: #1d7b2d;
+            background-color: #28a745;
         }
 
         .social-media-icons a[title]::after {
@@ -270,6 +269,7 @@
             background-color: #000;
             color: #fff;
             padding: 40px 0;
+            text-align: center;
         }
 
         footer .footer-content {
@@ -277,16 +277,14 @@
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-        }
-
-        footer .footer-content div {
-            margin: 10px 0;
+            text-align: center;
         }
 
         footer .footer-links,
         footer .footer-social {
             display: flex;
             align-items: center;
+            justify-content: center;
         }
 
         footer .footer-links a,
@@ -309,16 +307,16 @@
         footer .footer-logo {
             font-size: 1.5em;
             font-weight: bold;
+            margin-bottom: 20px;
         }
 
         footer .footer-text {
             font-size: 0.8em;
             color: #aaa;
-            text-align: center;
         }
+
     </style>
 </head>
-
 <body>
 
     <!-- Navbar -->
@@ -334,7 +332,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
-                    <li class="nav-item">
+                                       <li class="nav-item">
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
@@ -529,7 +527,4 @@
         });
     </script>
 </body>
-
 </html>
-
-
