--- a/index.html
+++ b/index.html
@@ -1,164 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Metadata of the Webpage -->
-    <!-- Character-set Metadata -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Viewport Metadata -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Description Metadata-->
-    <meta name="description" content="Portfolio Website" />
-    <!-- Author Metadata -->
-    <meta name="author" content="Afnan Abdullahi" />
-    <!-- Keyword Metadata -->
-    <meta
-      name="keywords"
-      content="Afnan Abdullahi, Data Scientist, Behavioral Scientist, Afnan Abdullahi Portfolio, Data Science Projects, Afnan Abdullahi Website, Afnan Abdullahi GitHub"
-    />
-    <!-- Webpage Logo -->
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" />
-    <!-- Webpage Title -->
-    <title>Afnan Abdullahi</title>
-
-    <!-- Import CSS: Main Stylesheet -->
-    <link rel="stylesheet" href="./assets/css/main.css" />
-  </head>
-
-  <body>
-    <div id="particles-js">
-      <div class="header">
-        <h1>
-          <span class="site-title">AFNAN ABDULLAHI</span>
-          <span class="site-description">Data Scientist • Machine Learning Engineer • Behavioral Scientist</span>
-        </h1>
-        <div class="header-icons">
-          <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/afnan-abdullahi/">
-            <i class="icon fa fa-linkedin" aria-hidden="true"></i>
-          </a>
-          <a aria-label="My Github Profile" target="_blank" href="https://github.com/afnan-abdullahi">
-            <i class="icon fa fa-github-alt" aria-hidden="true"></i>
-          </a>
-          <a aria-label="Send Email" href="mailto:afnan@example.com" target="_blank">
-            <i class="icon fa fa-envelope"></i>
-          </a>
-        </div>
-        <div class="header-links">
-          <a class="link" href="#about" data-scroll>About Me</a>
-          <a class="link" href="#projects" data-scroll>Projects</a>
-        </div>
-      </div>
-      <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
-    </div>
-
-    <!-- About Section -->
-    <section id="about">
-      <!-- User Introduction-->
-      <div class="user-details">
-        <h1>My Story</h1>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="./assets/img/webp/Professional-Picture-Me.webp"
-            alt="Professional Me"
-            width="20%"
-            style="border-radius: 50%"
-          />
-          <img
-            src="./assets/img/jpg/Professional-Picture-Me.jpg"
-            alt="Professional Me"
-            width="20%"
-            style="border-radius: 50%"
-          />
-        </picture>
-        <p>
-          I am a Data Scientist with a background in Behavioral Science, holding a degree in Psychology with a focus on Neuroscience. My expertise lies in using data-driven approaches to solve complex problems and improve decision-making processes. Currently, I am working on predictive modeling and machine learning projects, with a keen interest in healthcare and finance. My goal is to leverage my analytical skills to contribute to impactful and innovative solutions in the data science field.
-        </p>
-      </div>
-
-      <!-- User Specifics -->
-      <div class="user">
-        <!-- Technology Stack #1: Languages -->
-        <div class="tech">
-          <h2>Languages</h2>
-          <i class="devicon-python-plain colored"></i>
-          <i class="devicon-r-original colored"></i>
-          <i class="devicon-sql-plain-wordmark colored"></i>
-          <p>My preferred languages for data analysis, machine learning, and statistical modeling.</p>
-        </div>
-
-        <!-- Technology Stack #2: Data Science -->
-        <div class="tech">
-          <h2>Data Science</h2>
-          <i class="devicon-tensorflow-original colored"></i>
-          <i class="devicon-pandas-original-wordmark colored"></i>
-          <i class="devicon-numpy-original-wordmark colored"></i>
-          <p>Tools and libraries I use for data preprocessing, modeling, and deep learning.</p>
-        </div>
-
-        <!-- Technology Stack #3: Visualization -->
-        <div class="tech">
-          <h2>Visualization</h2>
-          <i class="devicon-tableau-original colored"></i>
-          <i class="devicon-d3js-plain colored"></i>
-          <i class="devicon-matplotlib-plain colored"></i>
-          <p>Technologies I use to create insightful and interactive data visualizations.</p>
-        </div>
-
-        <!-- Technology Stack #4: Tools -->
-        <div class="tech">
-          <h2>Tools</h2>
-          <i class="devicon-git-plain-wordmark colored"></i>
-          <i class="devicon-jupyter-plain colored"></i>
-          <i class="devicon-docker-plain-wordmark colored"></i>
-          <p>My favorite tools for version control, experimentation, and container orchestration.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-      <div class="user-details">
-        <h1>Featured Projects</h1>
-      </div>
-
-      <!-- User Project #1: Predictive Maintenance for Renewable Energy -->
-      <div class="user-projects">
-        <div class="images-right">
-          <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Predictive-Maintenance.webp" alt="Predictive Maintenance" />
-            <img alt="Predictive Maintenance" src="./assets/img/jpg/Predictive-Maintenance.jpg" />
-          </picture>
-        </div>
-        <div class="contents" style="text-align: center">
-          <h3>Predictive Maintenance for Renewable Energy</h3>
-          <div>
-            <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/python.svg" style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)" />
-            &nbsp;
-            <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/tensorflow.svg" style="filter: invert(38%) sepia(27%) saturate(2702%) hue-rotate(329deg) brightness(99%) contrast(100%)" />
-          </div>
-          <p style="text-align: justify">
-            Developed a predictive maintenance system for renewable energy assets using machine learning techniques. The project involved analyzing sensor data to predict equipment failures and schedule maintenance proactively.
-          </p>
-          <a class="project-link" target="_blank" href="https://github.com/afnan-abdullahi/predictive-maintenance">
-            Check it out!
-          </a>
-        </div>
-      </div>
-
-      <!-- User Project #2: Customer Churn Prediction -->
-      <div class="user-projects">
-        <div class="images-left">
-          <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Customer-Churn-Prediction.webp" alt="Customer Churn Prediction" />
-            <img alt="Customer Churn Prediction" src="./assets/img/jpg/Customer-Churn-Prediction.jpg" />
-          </picture>
-        </div>
-        <div class="contents-right" style="text-align: center">
-          <h3>Customer Churn Prediction</h3>
-          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/python.svg" style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)" />
-          &nbsp;
-          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/pandas.svg" style="filter: invert(24%) sepia(14%) saturate(2270%) hue-rotate(222deg) brightness(102%) contrast(90%)" />
-          &nbsp;
-          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
-          <p style="
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Afnan A. Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Afnan A.</h1>
+        <p>Data Analyst / Data Scientist</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Welcome to My Portfolio</h2>
+            <p>Explore my work and background in data analysis and science.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/afnanabdullahi/">LinkedIn</a> or visit my <a href="https://github.com/AfnanAbdullahi">GitHub</a>.</p>
+        <p>&copy; 2024 Afnan A.</p>
+    </footer>
+</body>
+</html>
