--- a/about.html
+++ b/about.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Afnan A.</title>
+    <title>Skills - Afnan A.</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>Skills</h1>
     </header>
     <nav>
         <ul>
@@ -16,23 +17,60 @@
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="container">
         <section>
-            <h2>Afnan Abdullahi</h2>
-            <p>Experienced data analyst with a strong background in engineering and neuroscience.</p>
-            <h3>Skills:</h3>
-            <ul>
-                <li>Programming: Python, SQL, SPSS</li>
-                <li>Machine Learning: Scikit-learn, TensorFlow</li>
-                <li>Data Visualization: Plotly, Matplotlib</li>
-                <!-- Add more skills as needed -->
-            </ul>
+            <h2 class="text-center my-4">Skills</h2>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="images/skills/1.png" class="card-img-top" alt="Python">
+                        <div class="card-body">
+                            <h5 class="card-title">Python</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="images/skills/2.png" class="card-img-top" alt="Data Visualization">
+                        <div class="card-body">
+                            <h5 class="card-title">Data Visualization</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="images/skills/3.png" class="card-img-top" alt="SQL">
+                        <div class="card-body">
+                            <h5 class="card-title">SQL</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="images/skills/4.png" class="card-img-top" alt="Data Storytelling">
+                        <div class="card-body">
+                            <h5 class="card-title">Data Storytelling</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Afnan A.</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
