--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afnan A. Portfolio</title>
+    <meta name="description" content="Portfolio of Afnan A., a Data Analyst and Data Scientist showcasing projects and skills.">
+    <meta name="keywords" content="Data Science, Data Analysis, Machine Learning, Afnan A. Portfolio">
+    <meta name="author" content="Afnan A.">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Afnan A.</h1>
-        <p>Data Analyst / Data Scientist</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="projects.html">Projects</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Afnan A.</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </nav>
-    <main>
-        <section>
-            <h2>Welcome to My Portfolio</h2>
-            <p>Explore my work and background in data analysis and science.</p>
-        </section>
-    </main>
-    <footer>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/afnanabdullahi/">LinkedIn</a> or visit my <a href="https://github.com/AfnanAbdullahi">GitHub</a>.</p>
-        <p>&copy; 2024 Afnan A.</p>
-    </footer>
-</body>
-</html>
+
+    <header id="home" class="text-center py-5 bg-primary text-white">
+        <div class="container">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Data Analyst / Data Scientist</p>
+        </div>
+    </header>
