--- a/index.html
+++ b/index.html
@@ -36,3 +36,156 @@
             <p>Data Analyst / Data Scientist</p>
         </div>
     </header>
+
+    <section id="about" class="py-5">
+        <div class="container text-center">
+            <h2 class="mb-4">About</h2>
+            <img src="images/about/1.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
+            <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
+        </div>
+    </section>
+
+    <section id="projects" class="py-5 bg-light">
+        <div class="container text-center">
+            <h2 class="mb-4">Projects</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img src="images/projects/1.jpg" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-primary">Blog Post</a>
+                            <a href="#" class="btn btn-secondary">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img src="images/projects/2.jpg" class="card-img-top" alt="Project 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-primary">Blog Post</a>
+                            <a href="#" class="btn btn-secondary">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img src="images/projects/3.jpg" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-primary">Blog Post</a>
+                            <a href="#" class="btn btn-secondary">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="py-5">
+        <div class="container text-center">
+            <h2 class="mb-4">Skills</h2>
+            <div class="row">
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        <img src="images/skills/1.png" class="card-img-top" alt="Python">
+                        <div class="card-body">
+                            <h5 class="card-title">Python</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        <img src="images/skills/2.png" class="card-img-top" alt="Data Visualization">
+                        <div class="card-body">
+                            <h5 class="card-title">Data Visualization</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        <img src="images/skills/3.png" class="card-img-top" alt="SQL">
+                        <div class="card-body">
+                            <h5 class="card-title">SQL</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+                                <div class="col-md-3 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        <img src="images/skills/4.png" class="card-img-top" alt="Data Storytelling">
+                        <div class="card-body">
+                            <h5 class="card-title">Data Storytelling</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="py-5 bg-dark text-white">
+        <div class="container text-center">
+            <h2 class="mb-4">Contact Me</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <p><img src="icons/email.png" alt="Email Icon" style="width: 24px;"> afnan.abdullahi375@gmail.com</p>
+                    <p><img src="icons/phone.png" alt="Phone Icon" style="width: 24px;"> +1 (612) 461-6083</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 d-flex justify-content-around">
+                    <a href="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
+                        <img src="icons/linkedin.png" alt="LinkedIn Icon" style="width: 40px;">
+                    </a>
+                    <a href="https://github.com/AfnanAbdullahi" target="_blank" class="text-white" title="GitHub">
+                        <img src="icons/github.png" alt="GitHub Icon" style="width: 40px;">
+                    </a>
+                    <a href="https://twitter.com" target="_blank" class="text-white" title="Twitter">
+                        <img src="icons/twitter.png" alt="Twitter Icon" style="width: 40px;">
+                    </a>
+                    <a href="https://medium.com" target="_blank" class="text-white" title="Medium">
+                        <img src="icons/medium.png" alt="Medium Icon" style="width: 40px;">
+                    </a>
+                    <a href="https://youtube.com" target="_blank" class="text-white" title="YouTube">
+                        <img src="icons/youtube.png" alt="YouTube Icon" style="width: 40px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Afnan A. | Designed with ❤️ using Bootstrap</p>
+    </footer>
+
+    <script>
+        // Smooth scrolling for navigation links
+        $(document).ready(function(){
+            $("a.nav-link").on('click', function(event) {
+                if (this.hash !== "") {
+                    event.preventDefault();
+                    var hash = this.hash;
+                    $('html, body').animate({
+                        scrollTop: $(hash).offset().top
+                    }, 800, function(){
+                        window.location.hash = hash;
+                    });
+                }
+            });
+        });
+    </script>
+</body>
+</html>
+
