--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Afnan A.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -56,8 +57,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 1</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">Blog Post</a>
-                            <a href="#" class="btn btn-secondary">Source Code</a>
+                            <a href="#" class="btn btn-outline-success">Blog Post</a>
+                            <a href="#" class="btn btn-outline-secondary">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -67,8 +68,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">Blog Post</a>
-                            <a href="#" class="btn btn-secondary">Source Code</a>
+                            <a href="#" class="btn btn-outline-success">Blog Post</a>
+                            <a href="#" class="btn btn-outline-secondary">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -78,8 +79,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 3</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">Blog Post</a>
-                            <a href="#" class="btn btn-secondary">Source Code</a>
+                            <a href="#" class="btn btn-outline-success">Blog Post</a>
+                            <a href="#" class="btn btn-outline-secondary">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -93,41 +94,49 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card h-100">
-                        <img src="images/skills/1.png" class="card-img-top" alt="Python">
+                        <div class="card-header bg-transparent">
+                            <i class="fab fa-python fa-3x skill-icon text-dark-green"></i>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Python</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                            <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card h-100">
-                        <img src="images/skills/2.png" class="card-img-top" alt="Data Visualization">
+                        <div class="card-header bg-transparent">
+                            <i class="fas fa-chart-bar fa-3x skill-icon text-dark-green"></i>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Data Visualization</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                            <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card h-100">
-                        <img src="images/skills/3.png" class="card-img-top" alt="SQL">
+                        <div class="card-header bg-transparent">
+                            <i class="fas fa-database fa-3x skill-icon text-dark-green"></i>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">SQL</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                            <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                         </div>
                     </div>
                 </div>
-                                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card h-100">
-                        <img src="images/skills/4.png" class="card-img-top" alt="Data Storytelling">
+                        <div class="card-header bg-transparent">
+                            <i class="fas fa-comments fa-3x skill-icon text-dark-green"></i>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Data Storytelling</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-link">Link to course or bootcamp</a>
+                            <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                         </div>
                     </div>
                 </div>
@@ -138,28 +147,28 @@
     <section id="contact" class="py-5 bg-dark text-white">
         <div class="container text-center">
             <h2 class="mb-4">Contact Me</h2>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
-                    <p><img src="icons/email.png" alt="Email Icon" style="width: 24px;"> afnan.abdullahi375@gmail.com</p>
-                    <p><img src="icons/phone.png" alt="Phone Icon" style="width: 24px;"> +1 (612) 461-6083</p>
+                    <p><i class="fas fa-envelope text-dark-green"></i> afnan.abdullahi375@gmail.com</p>
+                    <p><i class="fas fa-phone-alt text-dark-green"></i> +1 (612) 461-6083</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 d-flex justify-content-around">
-                    <a href="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
-                        <img src="icons/linkedin.png" alt="LinkedIn Icon" style="width: 40px;">
+                    <ahref="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
+                        <i class="fab fa-linkedin fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://github.com/AfnanAbdullahi" target="_blank" class="text-white" title="GitHub">
-                        <img src="icons/github.png" alt="GitHub Icon" style="width: 40px;">
+                        <i class="fab fa-github fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://twitter.com" target="_blank" class="text-white" title="Twitter">
-                        <img src="icons/twitter.png" alt="Twitter Icon" style="width: 40px;">
+                        <i class="fab fa-twitter fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://medium.com" target="_blank" class="text-white" title="Medium">
-                        <img src="icons/medium.png" alt="Medium Icon" style="width: 40px;">
+                        <i class="fab fa-medium fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://youtube.com" target="_blank" class="text-white" title="YouTube">
-                        <img src="icons/youtube.png" alt="YouTube Icon" style="width: 40px;">
+                        <i class="fab fa-youtube fa-2x text-dark-green"></i>
                     </a>
                 </div>
             </div>
@@ -188,4 +197,3 @@
     </script>
 </body>
 </html>
-
