--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         </div>
     </nav>
 
-    <header id="home" class="text-center py-5 bg-primary text-white">
+    <header id="home" class="text-center py-5 bg-primary text-white header-gradient">
         <div class="container">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Data Analyst / Data Scientist</p>
+            <h1 class="display-4">Welcome to My Portfolio</h1>
+            <p class="lead">Data Analyst / Data Scientist</p>
         </div>
     </header>
 
     <section id="about" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4">About</h2>
-            <img src="images/about/1.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <img src="Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
@@ -149,13 +149,14 @@
             <h2 class="mb-4">Contact Me</h2>
             <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
+                    <p><i class="fas fa-envelope text-dark-green"></i> afnan.abd
                     <p><i class="fas fa-envelope text-dark-green"></i> afnan.abdullahi375@gmail.com</p>
                     <p><i class="fas fa-phone-alt text-dark-green"></i> +1 (612) 461-6083</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 d-flex justify-content-around">
-                    <ahref="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
+                    <a href="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
                         <i class="fab fa-linkedin fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://github.com/AfnanAbdullahi" target="_blank" class="text-white" title="GitHub">
